# kmp-mpi-cuda

./: CMakeLists.txt  README.md  kmp_mpi.cpp
src/: kmp_cuda.cu  kmp_mpi.cpp
